--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "deploy": "wrangler publish",
+    "wrangler-dev": "wrangler dev"
   },
   "dependencies": {
     "@nuxt/eslint": "^0.5.7",
