Updated the blog page

--- a/package.json
+++ b/package.json
@@ -14,17 +14,19 @@
   },
   "dependencies": {
     "@nuxt/eslint": "^0.5.7",
-    "@nuxt/icon": "^1.5.1",
+    "@nuxt/icon": "^1.5.2",
     "@nuxtjs/color-mode": "^3.5.1",
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.12.1",
     "@vueuse/head": "^2.0.0",
+    "archiver-utils": "^5.0.2",
     "glob": "^11.0.0",
+    "minipass": "^7.1.2",
     "node-fetch": "^3.0.0",
     "nuxt": "^3.13.2",
+    "signal-exit": "^3.0.3",
     "vue": "latest",
-    "vue-router": "latest",
-    "signal-exit": "^3.0.3"
+    "vue-router": "latest"
   },
   "devDependencies": {
     "@nuxt/types": "^2.18.1",
