--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@pinia/nuxt": "^0.5.4",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "prettier": "3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.6"
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.8"
   }
 }
