--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "wrangler-dev": "wrangler dev"
   },
   "dependencies": {
+    "@nuxt/bridge": "^3.3.1",
     "@nuxt/eslint": "^0.5.7",
     "@nuxt/icon": "^1.5.2",
     "@nuxtjs/color-mode": "^3.5.1",
@@ -34,9 +35,11 @@
   "devDependencies": {
     "@nuxt/types": "^2.18.1",
     "@pinia/nuxt": "^0.5.4",
+    "@types/node": "^22.7.4",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.8"
+    "prettier-plugin-tailwindcss": "^0.6.8",
+    "typescript": "^5.6.2"
   }
 }
