--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "dependencies": {
     "@nuxt/bridge": "^3.3.1",
     "@nuxt/eslint": "^0.5.7",
-    "@nuxt/icon": "^1.5.2",
     "@nuxtjs/color-mode": "^3.5.1",
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.12.1",
@@ -33,11 +32,13 @@
     "vue-router": "latest"
   },
   "devDependencies": {
+    "@nuxt/icon": "^1.5.3",
     "@nuxt/types": "^2.18.1",
     "@pinia/nuxt": "^0.5.4",
     "@types/node": "^22.7.4",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "nuxt-icon": "^1.0.0-beta.7",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "typescript": "^5.6.2"
