--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@nuxt/bridge": "^3.3.1",
+    "@nuxt/content": "^2.13.2",
     "@nuxt/eslint": "^0.5.7",
     "@nuxtjs/color-mode": "^3.5.1",
     "@nuxtjs/google-fonts": "^3.2.0",
