--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxt/bridge": "^3.3.1",
     "@nuxt/content": "^2.13.2",
     "@nuxt/eslint": "^0.5.7",
+    "@nuxthq/studio": "^2.1.1",
     "@nuxtjs/color-mode": "^3.5.1",
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.12.1",
