--- a/deno.json
+++ b/deno.json
@@ -35,7 +35,10 @@
         "semiColons": true,
         "singleQuote": false,
         "proseWrap": "preserve",
-        "exclude": []
+        "exclude": [
+            "**/_fresh/*",
+            "fresh.gen.ts"
+        ]
     },
     "lock": false,
     "lint": {
@@ -73,7 +76,8 @@
             ]
         },
         "exclude": [
-            "**/_fresh/*"
+            "**/_fresh/*",
+            "fresh.gen.ts"
         ]
     },
     "imports": {
