--- a/deno.json
+++ b/deno.json
@@ -81,6 +81,7 @@
         ]
     },
     "imports": {
+        "$deco": "https://deno.land/x/deco@1.108.0/mod.ts",
         "$fresh/": "https://deno.land/x/fresh@1.7.3/",
         "$gfm": "https://deno.land/x/gfm@0.6.0/mod.ts",
         "@std/front-matter": "jsr:@std/front-matter@^1.0.5",
