--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "glob": "^11.0.1",
     "minipass": "^7.1.2",
     "node-fetch": "^3.3.2",
-    "nuxt": "^3.15.4",
+    "nuxt": "^3.17.0",
     "signal-exit": "^3.0.7",
     "v-lazy-image": "^2.1.1",
     "vue": "latest",
@@ -34,6 +34,7 @@
     "vue-router": "latest"
   },
   "devDependencies": {
+    "@nuxt/devtools": "^2.4.0",
     "@nuxt/icon": "^1.10.3",
     "@nuxt/types": "^2.18.1",
     "@pinia/nuxt": "^0.5.5",
