--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "nuxt-app",
   "private": true,
   "type": "module",
-  "main": "index.js",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -13,35 +12,21 @@
     "wrangler-dev": "wrangler dev"
   },
   "dependencies": {
-    "@nuxt/bridge": "^3.4.0",
-    "@nuxt/content": "^2.13.4",
-    "@nuxt/eslint": "^0.5.7",
+    "@iconify/vue": "^3.2.1",
+    "@nuxt/content": "^3.5.1",
     "@nuxthq/studio": "^2.2.1",
-    "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.13.1",
-    "@vueuse/head": "^2.0.0",
-    "archiver-utils": "^5.0.2",
     "axios": "^1.8.1",
-    "glob": "^11.0.1",
-    "minipass": "^7.1.2",
-    "node-fetch": "^3.3.2",
-    "nuxt": "^3.17.0",
-    "signal-exit": "^3.0.7",
+    "better-sqlite3": "^11.9.1",
+    "nuxt": "^3.17.1",
     "v-lazy-image": "^2.1.1",
-    "vue": "latest",
-    "vue-intersection-observer": "^0.1.9",
-    "vue-router": "latest"
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@nuxt/devtools": "^2.4.0",
-    "@nuxt/icon": "^1.10.3",
-    "@nuxt/types": "^2.18.1",
-    "@pinia/nuxt": "^0.5.5",
-    "@types/node": "^22.13.9",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.3",
-    "nuxt-icon": "1.0.0-beta.7",
+    "@types/node": "^22.15.3",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "typescript": "^5.8.2"
