Add @vueuse/motion module and update dependencies in configuration files

--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@nuxthq/studio": "^2.2.1",
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.13.1",
+    "@vueuse/motion": "^3.0.3",
     "axios": "^1.8.1",
     "better-sqlite3": "^11.9.1",
+    "motion": "^12.9.2",
     "nuxt": "^3.17.1",
     "v-lazy-image": "^2.1.1",
     "vue": "^3.5.13",
