--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "wrangler-dev": "wrangler dev"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@iconify/vue": "^3.2.1",
     "@nuxthq/studio": "^2.2.1",
     "@nuxtjs/google-fonts": "^3.2.0",
