--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@iconify/vue": "^3.2.1",
+    "@nuxt/types": "^2.18.1",
     "@nuxthq/studio": "^2.2.1",
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.13.1",
@@ -21,9 +22,9 @@
     "axios": "^1.8.1",
     "better-sqlite3": "^11.9.1",
     "motion": "^12.9.2",
-    "nuxt": "^3.17.1",
+    "nuxt": "^3.17.5",
     "v-lazy-image": "^2.1.1",
-    "vue": "^3.5.13",
+    "vue": "^3.5.16",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
