--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@iconify/vue": "^3.2.1",
+    "@nuxt/icon": "^1.13.0",
     "@nuxt/types": "^2.18.1",
     "@nuxthq/studio": "^2.2.1",
     "@nuxtjs/google-fonts": "^3.2.0",
@@ -28,6 +29,7 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@iconify-json/mdi": "^1.2.3",
     "@nuxt/devtools": "^2.4.0",
     "@types/node": "^22.15.3",
     "prettier": "^3.5.3",
