--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vueuse/motion": "^3.0.3",
     "axios": "^1.8.1",
     "better-sqlite3": "^11.9.1",
+    "lenis": "^1.3.15",
     "motion": "^12.9.2",
     "nuxt": "^3.17.5",
     "v-lazy-image": "^2.1.1",
